[gd_scene load_steps=37 format=3 uid="uid://cfnj4sjd2hyk2"]

[ext_resource type="Script" uid="uid://cdg2jtdcqkij7" path="res://TestScene.gd" id="1_3qqfy"]
[ext_resource type="PackedScene" uid="uid://c2jvgq5j7ebc3" path="res://Player/Player.tscn" id="1_ke3s1"]
[ext_resource type="Texture2D" uid="uid://c31lfxe6vyq02" path="res://addons/kenney_prototype_textures/dark/texture_01.png" id="2_hx0yk"]
[ext_resource type="Script" uid="uid://buji68gvseklw" path="res://Gravity/GravityBroadcast.gd" id="3_c73p6"]
[ext_resource type="PackedScene" uid="uid://bnia31i2o3o0h" path="res://Grab/Cube.tscn" id="4_oohy4"]
[ext_resource type="PackedScene" uid="uid://vlyjwnu5k6jd" path="res://Prefabs/Microwave.tscn" id="5_76gpq"]
[ext_resource type="PackedScene" uid="uid://ca8qrqsoc4s41" path="res://Plug/Plug.tscn" id="6_qcksb"]
[ext_resource type="PackedScene" uid="uid://dp1s54cpcg375" path="res://Plug/Socket.tscn" id="7_0asn0"]
[ext_resource type="PackedScene" uid="uid://deni4dosbtepm" path="res://Rope/RopeEnd.tscn" id="7_facub"]
[ext_resource type="Script" uid="uid://bwk1kj6ikohms" path="res://Rope/Rope.gd" id="8_0h835"]
[ext_resource type="PackedScene" uid="uid://b6shb8uin2osn" path="res://Rope/RopeSegment.tscn" id="9_2psmy"]
[ext_resource type="Script" uid="uid://cnv4e7ywnp1v4" path="res://Gravity/GravitySwitcher.gd" id="11_d8pwe"]
[ext_resource type="Script" uid="uid://trjuw0fy81jd" path="res://Door/CombinedDoor.gd" id="12_5jd6f"]
[ext_resource type="Script" uid="uid://ckwxpbc13xs16" path="res://Door/Door.gd" id="13_o3732"]
[ext_resource type="Texture2D" uid="uid://d3cbqsfmnldpv" path="res://addons/kenney_prototype_textures/red/texture_10.png" id="14_ikdc7"]
[ext_resource type="PackedScene" uid="uid://chhtyhruwcfkq" path="res://Button/Button.tscn" id="16_xbkab"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ihxjt"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_j4bli"]
sky_material = SubResource("ProceduralSkyMaterial_ihxjt")

[sub_resource type="Environment" id="Environment_eiba1"]
background_mode = 2
sky = SubResource("Sky_j4bli")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1f4xa"]
albedo_texture = ExtResource("2_hx0yk")
uv1_scale = Vector3(-0.1, -0.1, -0.1)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_iu0uh"]
lightmap_size_hint = Vector2i(12, 12)

[sub_resource type="BoxShape3D" id="BoxShape3D_1dxo7"]
size = Vector3(2, 0.005, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_7a7n5"]
size = Vector3(1.95142, 6, 1.96484)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5rhbq"]
albedo_texture = ExtResource("2_hx0yk")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_nxl2t"]
size = Vector3(1, 1.5, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_u6j2s"]
size = Vector3(1, 1.5, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_28meu"]
top_radius = 0.2
bottom_radius = 0.2
height = 3.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ekpib"]
height = 3.0
radius = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_3ltq2"]
size = Vector3(5, 3, 5)

[sub_resource type="BoxMesh" id="BoxMesh_pxewe"]
size = Vector3(5, 4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_4d8kc"]
size = Vector3(5, 4, 1)

[sub_resource type="BoxMesh" id="BoxMesh_tpcsm"]
size = Vector3(5, 1, 7)

[sub_resource type="BoxShape3D" id="BoxShape3D_yv54p"]
size = Vector3(5, 1, 7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p11ke"]
albedo_texture = ExtResource("14_ikdc7")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_8fdpo"]
size = Vector3(0.4, 4, 2.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_q0hl2"]
size = Vector3(0.4, 4, 2.5)

[node name="TestScene" type="Node3D"]
script = ExtResource("1_3qqfy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.499169, 0.0288195, 0, 0.057639, 0.998338, -0.5, 0.864586, -0.0499168, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_eiba1")

[node name="Plane2" type="Node3D" parent="."]
transform = Transform3D(10, 0, 0, 0, -4.37114e-08, -11, 0, 1, -4.80825e-07, 0, 1.10459, -23.0766)

[node name="StaticBody3D" type="AnimatableBody3D" parent="Plane2"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Plane2/StaticBody3D"]
material_override = SubResource("StandardMaterial3D_1f4xa")
mesh = SubResource("PlaneMesh_iu0uh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plane2/StaticBody3D"]
shape = SubResource("BoxShape3D_1dxo7")

[node name="ShipGravity" type="Area3D" parent="Plane2"]
collision_layer = 0
collision_mask = 7
gravity_space_override = 1
script = ExtResource("3_c73p6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plane2/ShipGravity"]
transform = Transform3D(1, 0, 0, 0, 0.999992, 0, 0, 0, 1, 0, 3.18774, 0)
shape = SubResource("BoxShape3D_7a7n5")

[node name="Plane" type="Node3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 11, 0, 0, 0)

[node name="StaticBody3D" type="AnimatableBody3D" parent="Plane"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Plane/StaticBody3D"]
material_override = SubResource("StandardMaterial3D_1f4xa")
mesh = SubResource("PlaneMesh_iu0uh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plane/StaticBody3D"]
shape = SubResource("BoxShape3D_1dxo7")

[node name="ShipGravity" type="Area3D" parent="Plane"]
collision_layer = 0
collision_mask = 7
gravity_space_override = 1
script = ExtResource("3_c73p6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plane/ShipGravity"]
transform = Transform3D(1, 0, 0, 0, 0.999992, 0, 0, 0, 1, 0, 3.18774, 0)
shape = SubResource("BoxShape3D_7a7n5")

[node name="Player" parent="." instance=ExtResource("1_ke3s1")]

[node name="Microwave" parent="." instance=ExtResource("5_76gpq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.82715, 2.01153, -4.60981)

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.728, 0.75, -4.76)
collision_mask = 7
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="AnimatableBody3D"]
material_override = SubResource("StandardMaterial3D_5rhbq")
mesh = SubResource("BoxMesh_nxl2t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AnimatableBody3D"]
shape = SubResource("BoxShape3D_u6j2s")

[node name="Plug" parent="." instance=ExtResource("6_qcksb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.47689, 0.116516, -9.10131)
mass = 0.5

[node name="Socket" parent="." instance=ExtResource("7_0asn0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.77903, 1.6868, -9.98688)

[node name="pillar3" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.32115, 0.0191642, 6.85393)

[node name="RopeEnd" parent="pillar3" node_paths=PackedStringArray("body") instance=ExtResource("7_facub")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
body = NodePath("..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="pillar3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("CylinderMesh_28meu")
skeleton = NodePath("../../pillar3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="pillar3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CylinderShape3D_ekpib")

[node name="pillar" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.10637, 0.0191647, 1.48974)

[node name="RopeEnd" parent="pillar" node_paths=PackedStringArray("body") instance=ExtResource("7_facub")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
body = NodePath("..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="pillar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("CylinderMesh_28meu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="pillar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CylinderShape3D_ekpib")

[node name="Cube8" parent="." instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.25733, 1.71147, 6.02629)

[node name="RopeEnd" parent="Cube8" node_paths=PackedStringArray("body") instance=ExtResource("7_facub")]
body = NodePath("..")

[node name="Cube7" parent="." instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.98933, 1.71147, 6.36146)

[node name="RopeEnd" parent="Cube7" node_paths=PackedStringArray("body") instance=ExtResource("7_facub")]
body = NodePath("..")

[node name="Rope2" type="Node3D" parent="." node_paths=PackedStringArray("end_a", "end_b")]
script = ExtResource("8_0h835")
end_a = NodePath("../Cube8/RopeEnd")
end_b = NodePath("../Cube7/RopeEnd")
segment = ExtResource("9_2psmy")

[node name="Rope" type="Node3D" parent="." node_paths=PackedStringArray("end_a", "end_b")]
script = ExtResource("8_0h835")
end_a = NodePath("../pillar/RopeEnd")
end_b = NodePath("../pillar3/RopeEnd")
segment = ExtResource("9_2psmy")

[node name="Socket2" parent="." instance=ExtResource("7_0asn0")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.2268, 0.299901, -5.05419)

[node name="cubes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.00905, 0, 6.93626)

[node name="Cube" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.216756, 0.849319, -0.610179)

[node name="Cube2" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.216756, 0.849319, 1.08672)

[node name="Cube3" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60228, 0.849319, 1.08672)

[node name="Cube4" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60228, 0.849319, -0.133079)

[node name="Cube5" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.649264, 0.849319, 0.478181)

[node name="Cube6" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.649264, 1.71147, 0.478181)

[node name="Cube7" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.216756, 1.64113, -0.610179)

[node name="Cube8" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.216756, 1.64113, 1.08672)

[node name="Cube9" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60228, 1.64113, 1.08672)

[node name="Cube10" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60228, 1.64113, -0.133079)

[node name="Cube11" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.649264, 1.64113, 0.478181)

[node name="Cube12" parent="cubes" instance=ExtResource("4_oohy4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.649264, 2.50328, 0.478181)

[node name="AntiGravityRoom" type="Node3D" parent="."]

[node name="AirLeft" type="Timer" parent="AntiGravityRoom"]
one_shot = true

[node name="AntiGravity" type="Area3D" parent="AntiGravityRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 0, 7.5)
collision_layer = 0
collision_mask = 7
priority = 1
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector3(3, 2, 0)
gravity_direction = Vector3(3, 2, 0)
gravity = 20.0
script = ExtResource("11_d8pwe")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AntiGravityRoom/AntiGravity"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_3ltq2")
disabled = true

[node name="wall" type="AnimatableBody3D" parent="AntiGravityRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 2, 4.505)
collision_mask = 7
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="AntiGravityRoom/wall"]
material_override = SubResource("StandardMaterial3D_5rhbq")
mesh = SubResource("BoxMesh_pxewe")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AntiGravityRoom/wall"]
shape = SubResource("BoxShape3D_4d8kc")

[node name="ceiling" type="AnimatableBody3D" parent="AntiGravityRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 5.5, 4.505)
collision_mask = 7
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="AntiGravityRoom/ceiling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 3)
material_override = SubResource("StandardMaterial3D_5rhbq")
mesh = SubResource("BoxMesh_tpcsm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AntiGravityRoom/ceiling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 3)
shape = SubResource("BoxShape3D_yv54p")

[node name="wall2" type="AnimatableBody3D" parent="AntiGravityRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 2, 10.505)
collision_mask = 7
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="AntiGravityRoom/wall2"]
material_override = SubResource("StandardMaterial3D_5rhbq")
mesh = SubResource("BoxMesh_pxewe")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AntiGravityRoom/wall2"]
shape = SubResource("BoxShape3D_4d8kc")

[node name="CombinedDoor" type="Node3D" parent="AntiGravityRoom" node_paths=PackedStringArray("parts")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8, 0, 7.5)
script = ExtResource("12_5jd6f")
parts = [NodePath("Door1"), NodePath("Door2")]

[node name="Door1" type="Node3D" parent="AntiGravityRoom/CombinedDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1.25)
script = ExtResource("13_o3732")

[node name="DoorBody" type="AnimatableBody3D" parent="AntiGravityRoom/CombinedDoor/Door1"]
metadata/_edit_group_ = true

[node name="Mesh" type="MeshInstance3D" parent="AntiGravityRoom/CombinedDoor/Door1/DoorBody"]
material_override = SubResource("StandardMaterial3D_p11ke")
mesh = SubResource("BoxMesh_8fdpo")
skeleton = NodePath("../..")

[node name="Collision" type="CollisionShape3D" parent="AntiGravityRoom/CombinedDoor/Door1/DoorBody"]
shape = SubResource("BoxShape3D_q0hl2")

[node name="ClosedPoint" type="Marker3D" parent="AntiGravityRoom/CombinedDoor/Door1"]

[node name="OppenedPoint" type="Marker3D" parent="AntiGravityRoom/CombinedDoor/Door1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)

[node name="Door2" type="Node3D" parent="AntiGravityRoom/CombinedDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1.25)
script = ExtResource("13_o3732")

[node name="DoorBody" type="AnimatableBody3D" parent="AntiGravityRoom/CombinedDoor/Door2"]
metadata/_edit_group_ = true

[node name="Mesh" type="MeshInstance3D" parent="AntiGravityRoom/CombinedDoor/Door2/DoorBody"]
material_override = SubResource("StandardMaterial3D_p11ke")
mesh = SubResource("BoxMesh_8fdpo")
skeleton = NodePath("../..")

[node name="Collision" type="CollisionShape3D" parent="AntiGravityRoom/CombinedDoor/Door2/DoorBody"]
shape = SubResource("BoxShape3D_q0hl2")

[node name="ClosedPoint" type="Marker3D" parent="AntiGravityRoom/CombinedDoor/Door2"]

[node name="OppenedPoint" type="Marker3D" parent="AntiGravityRoom/CombinedDoor/Door2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5)

[node name="CombinedDoor2" type="Node3D" parent="AntiGravityRoom" node_paths=PackedStringArray("parts")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.2, 0, 7.5)
script = ExtResource("12_5jd6f")
parts = [NodePath("Door1"), NodePath("Door2")]

[node name="Door1" type="Node3D" parent="AntiGravityRoom/CombinedDoor2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1.25)
script = ExtResource("13_o3732")

[node name="DoorBody" type="AnimatableBody3D" parent="AntiGravityRoom/CombinedDoor2/Door1"]
metadata/_edit_group_ = true

[node name="Mesh" type="MeshInstance3D" parent="AntiGravityRoom/CombinedDoor2/Door1/DoorBody"]
material_override = SubResource("StandardMaterial3D_p11ke")
mesh = SubResource("BoxMesh_8fdpo")
skeleton = NodePath("../..")

[node name="Collision" type="CollisionShape3D" parent="AntiGravityRoom/CombinedDoor2/Door1/DoorBody"]
shape = SubResource("BoxShape3D_q0hl2")

[node name="ClosedPoint" type="Marker3D" parent="AntiGravityRoom/CombinedDoor2/Door1"]

[node name="OppenedPoint" type="Marker3D" parent="AntiGravityRoom/CombinedDoor2/Door1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)

[node name="Door2" type="Node3D" parent="AntiGravityRoom/CombinedDoor2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1.25)
script = ExtResource("13_o3732")

[node name="DoorBody" type="AnimatableBody3D" parent="AntiGravityRoom/CombinedDoor2/Door2"]
metadata/_edit_group_ = true

[node name="Mesh" type="MeshInstance3D" parent="AntiGravityRoom/CombinedDoor2/Door2/DoorBody"]
material_override = SubResource("StandardMaterial3D_p11ke")
mesh = SubResource("BoxMesh_8fdpo")
skeleton = NodePath("../..")

[node name="Collision" type="CollisionShape3D" parent="AntiGravityRoom/CombinedDoor2/Door2/DoorBody"]
shape = SubResource("BoxShape3D_q0hl2")

[node name="ClosedPoint" type="Marker3D" parent="AntiGravityRoom/CombinedDoor2/Door2"]

[node name="OppenedPoint" type="Marker3D" parent="AntiGravityRoom/CombinedDoor2/Door2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5)

[node name="Button" parent="." instance=ExtResource("16_xbkab")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5.45215, 2, 3.99468)

[node name="Button2" parent="." instance=ExtResource("16_xbkab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.63204, 2.09245, 5.005)

[node name="Button3" parent="." instance=ExtResource("16_xbkab")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.05118, 2.07892, 5.005)

[connection signal="on_click" from="Button" to="AntiGravityRoom/CombinedDoor" method="switch"]
[connection signal="on_click" from="Button2" to="AntiGravityRoom/CombinedDoor" method="switch"]
[connection signal="on_click" from="Button3" to="." method="switch_gravity_room"]
